--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,9 @@
 {
   "name": "Bingo App",
   "short_name": "Bingo",
-  "start_url": "bingo.html",
+  "id": "bingo-app",
+  "start_url": "./",
+  "scope": "./",
   "display": "standalone",
   "background_color": "#b71c1c",
   "theme_color": "#b71c1c",
@@ -9,12 +11,14 @@
     {
       "src": "icon-192.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
       "src": "icon-512.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ]
 }
